--- a/ui/package.json
+++ b/ui/package.json
@@ -16,15 +16,18 @@
     "@angular/compiler": "^9.1.11",
     "@angular/core": "^9.1.11",
     "@angular/forms": "^9.1.11",
+    "@angular/localize": "^9.1.11",
     "@angular/platform-browser": "^9.1.11",
     "@angular/platform-browser-dynamic": "^9.1.11",
     "@angular/router": "^9.1.11",
+    "@ng-bootstrap/ng-bootstrap": "6.2.0",
     "@uprtcl/holochain-provider": "0.0.7-alpha.30.2",
     "apollo-angular": "^1.9.1",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
     "apollo-link-schema": "^1.2.5",
+    "bootstrap": "^4.4.0",
     "core-js": "^3.6.5",
     "graphql": "14.6.0",
     "graphql-tag": "^2.10.3",
